appId: org.reactjs.native.example.ReactNativeJest
---
- launchApp
# load all output constants saved in the setup file
- runScript: ./setup.js

#Testing login
- tapOn: ${output.screens.home.loginButton}
- tapOn: ${output.screens.login.submitLogin}
- tapOn: ${output.screens.login.modalOk}
- tapOn: ${output.screens.login.placeholderEmail}
- inputText: ${output.screens.login.email}
- tapOn: ${output.screens.login.placeholderPassword}
- inputText: ${output.screens.login.password}
- tapOn: ${output.screens.login.submitLogin}
- tapOn: ${output.screens.login.modalOk}
- runFlow: ./subFlows/goBackHome.yaml


#Test counter

- tapOn: ${output.screens.home.counter}
- tapOn: ${output.screens.counter.increment}
- tapOn: ${output.screens.counter.increment}
- tapOn: ${output.screens.counter.decrement}
- tapOn: ${output.screens.counter.decrement}
- tapOn: ${output.screens.counter.increment}
- tapOn: ${output.screens.counter.decrement}
- runFlow: ./subFlows/goBackHome.yaml